--- a/src/css/style.css
+++ b/src/css/style.css
@@ -1,5 +1,6 @@
 html{
     font-size: 62.5%;
+    scroll-behavior: smooth;
 }
 
 body{
@@ -57,6 +58,19 @@ body{
     text-transform: uppercase;
     font-size: 4rem;
 }
+
+.hero .scroll-arrow a{
+    position: absolute;
+    bottom: 40px;
+    left: 50%;
+    transform: translateX(-50%);
+    width: 35px;
+    height: 35px;
+    background: url(../images/seta_preta.png) no-repeat center;
+    background-size: contain;
+    animation: downarrow 0.6s infinite alternate ease-in-out;
+}
+
 
 .hero:after{
     content: url(../images/seta_preta.png);
