--- a/src/css/style.css
+++ b/src/css/style.css
@@ -358,3 +358,12 @@ body {
 .contact-form button:hover {
     background: #89aed7;
 }
+
+.dev-partner {
+  margin-top: 20px;
+  text-align: center;
+}
+.dev-partner a:hover {
+  text-decoration: underline;
+}
+
