--- a/src/css/style.css
+++ b/src/css/style.css
@@ -56,10 +56,11 @@ body {
 .hero h2 {
     font-weight: 500;
     text-transform: uppercase;
-    font-size: 4rem;
+    font-size: 3.5rem;
     color: #fff;
     /* <- adiciona esta linha */
     text-shadow: 2px 2px 4px rgba(0, 0, 0, 0.5);
+    transform: translateY(-80px);
 }
 
 .hero .scroll-arrow a {
@@ -176,7 +177,7 @@ body {
 }
 
 .about .image.left {
-    background: url(../images/Bate-estacas2.png) center center no-repeat;
+    background: url(../images/Eqp1.jpg) center center no-repeat;
     background-size: cover;
 }
 
@@ -206,7 +207,7 @@ body {
 }
 
 .services .service img {
-    width: 250px;
+    width: 300px;
     margin-bottom: 30px;
 }
 
